Secondary outputs are transformed properly now